@@ -6,6 +6,7 @@
 + Checking internet connecions
 + Retrieve ID from web site (if you have a token)
 + fix registry keys checking function
++ DEBUG message
 
 + Fix export local audit GPO function
 + Addedd cwiccs.ps1 parameters - $savereportjson, $online, $saveonlinejson,
